RESOLVED FIXED123179
REGRESSION: `if (false === (true && undefined)) console.log("wrong!");` logs "wrong!", shouldn't!
https://bugs.webkit.org/show_bug.cgi?id=123179
Summary REGRESSION: `if (false === (true && undefined)) console.log("wrong!");` logs ...
Geoffrey Garen
Reported 2013-10-22 15:51:56 PDT
Attachments
Patch (3.64 KB, patch)
2013-10-22 15:55 PDT, Geoffrey Garen
mhahnenberg: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (436.63 KB, application/zip)
2013-10-22 16:46 PDT, Build Bot
no flags
Geoffrey Garen
Comment 1 2013-10-22 15:55:33 PDT
Mark Hahnenberg
Comment 2 2013-10-22 16:01:05 PDT
Comment on attachment 214895 [details] Patch r=me
Oliver Hunt
Comment 3 2013-10-22 16:04:40 PDT
Comment on attachment 214895 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214895&action=review > Source/JavaScriptCore/parser/ResultType.h:132 > + if (op1.definitelyIsString() || op2.definitelyIsString()) why || instead of && for this case? what delightful piece of semantics am i missing?
Geoffrey Garen
Comment 4 2013-10-22 16:05:55 PDT
Comment on attachment 214895 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214895&action=review >> Source/JavaScriptCore/parser/ResultType.h:132 >> + if (op1.definitelyIsString() || op2.definitelyIsString()) > > why || instead of && for this case? what delightful piece of semantics am i missing? Oops!
Build Bot
Comment 5 2013-10-22 16:46:42 PDT
Comment on attachment 214895 [details] Patch Attachment 214895 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4358033 New failing tests: js/dom/branch-fold-correctness.html
Build Bot
Comment 6 2013-10-22 16:46:44 PDT
Created attachment 214904 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Geoffrey Garen
Comment 7 2013-10-22 16:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.